2007-03-07  John W. Eaton  <jwe@octave.org>

	* control/base/rlocus.m: Update for current plotting functions.

2007-03-07  A. S. Hodel  <a.s.hodel@eng.auburn.edu>

	* control/base/rlocus.m: Improve display.

2007-03-07  John W. Eaton  <jwe@octave.org>

	* plot/legend.m: Only handle positions -1:4.
	* plot/__pltopt1__.m: Don't set linestyle if only marker style is
	found in option string
	* plot/__uiobject_draw_axes__.m: Handle key position.

	* plot/newplot.m: Always reset next line color.

	* testfun/assert.m: Check that number of dimensions match before
	checking dimensions.

2007-03-07  Muthiah Annamalai  <muthuspost@gmail.com>

	* specfun/perms.m, specfun/factorial.m: Check args.

2007-03-07  John W. Eaton  <jwe@octave.org>

	* plot/mesh.m: Call newplot before doing anything.

	* plot/__uiobject_draw_axes__.m: Send "e\n" at end of data, not
	just "e".  Only flush plot stream once.
	From Daniel J Sebald <daniel.sebald@ieee.org>.

	* strings/blanks.m: Omit first index in assignment.

2007-03-07  Paul Kienzle  <pkienzle@users.sf.net>

	* set/setdiff.m: Some code cleanup and a fix for setdiff on rows.

2007-03-06  David Bateman  <dbateman@free.fr>
	    John W. Eaton  <jwe@octave.org>

	* set/setdiff.m: Ignore "rows" for cell array args.
	Handle cellstr args.

2007-03-05  John W. Eaton  <jwe@octave.org>

	* optimization/sqp.m: Defer first call to obj_hess until after
	calling obj_fun.

2007-03-02  Bob Weigel <rweigel@gmu.edu>

	* specfun/nchoosek.m: Fix nargin check.

2007-03-01  Daniel J Sebald  <daniel.sebald@ieee.org>

	* image/__img__.m: Don't set xlim and ylim properties.

2007-03-01  Paul Kienzle  <pkienzle@users.sf.net>

	* general/interp1.m: Fix *style cases for decreasing x.

2007-03-01  Muthiah Annamalai  <muthuspost@gmail.com>

	* polynomial/roots.m: Check nargin before accessing arg.

2007-02-28  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m: If looking at image data, Don't
	increment data_idx unless using gnuplot for display.
